[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "heroku_audit"
description = ""
authors = [
    {name = "Jake Howard", email = "jake.howard@torchbox.com"},
]
dynamic = ["version"]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: BSD License",
]
requires-python = ">=3.8"

dependencies = [
    "heroku3",
    "typer",
    "rich"
]

[project.scripts]
heroku_audit = "heroku_audit.cli:app"
