[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "heroku_audit"
description = ""
authors = [
    {name = "Jake Howard", email = "jake.howard@torchbox.com"},
]
dynamic = ["version"]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: BSD License",
]
requires-python = ">=3.9"

dependencies = [
    "heroku3",
    "typer",
    "rich"
]

[project.scripts]
heroku_audit = "heroku_audit.cli:app"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "black",
    "types-requests"
]

[tool.mypy]
mypy_path = "stubs"
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
strict_optional = true
implicit_optional = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true

[tool.ruff]
select = ["E", "F", "I", "W", "N", "B", "A", "C4"]
ignore = ["E501"]
